--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
         var options = {
             timeout: 3,
+            useSSL: true,
             onSuccess: onSuccess,
             onFailure: onFailure
         };
